# aubo_robot_ros2

./: README.md
aubo_ros2_common/: CMakeLists.txt  package.xml
aubo_ros2_common/include/: threadSafeQueue.h
aubo_ros2_common/msg/: AuboArmEvent.msg  AuboArmStates.msg  AuboJointStates.msg  AuboTcpPose.msg
aubo_ros2_common/srv/: AuboArmControl.srv
aubo_ros2_demo/: CMakeLists.txt  package.xml
aubo_ros2_demo/launch/: aubo_demo.launch.py
aubo_ros2_demo/src/: moveit_demo.cpp
aubo_ros2_description/: CMakeLists.txt  package.xml
aubo_ros2_description/config/: initial_positions.yaml
aubo_ros2_description/launch/: view_auboi5.launch.py
aubo_ros2_description/urdf/: aubo.gazebo.xacro  aubo_i5.urdf  aubo_i5.urdf.xacro
aubo_ros2_driver/: CMakeLists.txt  package.xml
aubo_ros2_driver/include/: AuboRobotMetaType.h  aubo_ros2_driver.h  aubo_ros2_metaType.h  auboroboterror.h  auborobotevent.h  serviceinterface.h
aubo_ros2_driver/lib/lib64/aubocontroller/: libauborobotcontroller.so.2
aubo_ros2_driver/src/: aubo_ros2_driver.cpp  main.cpp
aubo_ros2_driver/src/aubo_sdk/: aubo_sdk.cpp  aubo_thread.cpp
aubo_ros2_moveit_config/: CMakeLists.txt  package.xml
aubo_ros2_moveit_config/config/: joint_limits.yaml  joint_names.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml
aubo_ros2_moveit_config/launch/: aubo_moveit.launch.py  aubo_moveit_sim.launch.py
aubo_ros2_moveit_config/rviz/: moveit.rviz
aubo_ros2_moveit_config/srdf/: aubo_i5.srdf
aubo_ros2_trajectory_action/: CMakeLists.txt  package.xml
aubo_ros2_trajectory_action/include/: aubo_ros2_trajectory_action.h
aubo_ros2_trajectory_action/src/: aubo_ros2_trajectory_action.cpp  main.cpp
