<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aubo_ros2_trajectory_action</name>
  <version>1.0.0</version>
  <description>aubo ros2 trajectory action</description>
  <maintainer email="834031119@qq.com">Shaosong</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
